<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/bAction_modC"
        android:icon="@drawable/ic_create_black_24dp"
        android:title="@string/titleModificar"
        android:orderInCategory="10"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/bAction_llamarC"
        android:icon="@drawable/ic_call_black_24dp"
        android:title="@string/titleLlamar"
        android:orderInCategory="20"
        app:showAsAction="always"/>
    <item android:id="@+id/bAction_cancelarModC"
        android:icon="@drawable/ic_clear_black_24dp"
        android:title="@string/titleCancelar"
        android:orderInCategory="20"
        app:showAsAction="always"/>
</menu>